[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strands-postgresql-session-manager"
version = "0.1.0"
description = "PostgreSQL session manager for Strands Agents SDK with full ACID guarantees"
authors = [{name = "Miguel Cuartin Ordaz", email = "macuartin@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["strands", "agents", "session-manager", "postgresql", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "strands-agents>=1.0.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/macuartin/strands-postgresql-session-manager"
Repository = "https://github.com/macuartin/strands-postgresql-session-manager"
Issues = "https://github.com/macuartin/strands-postgresql-session-manager/issues"
Documentation = "https://github.com/macuartin/strands-postgresql-session-manager#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
strands_postgresql_session_manager = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: marks tests as integration tests (requires PostgreSQL)",
    "unit: marks tests as unit tests (fast, no external dependencies)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
precision = 2
show_missing = true
